# f1-race-replay

./: .gitignore  CONTRIBUTING.md  D:\Proyectos\f1-race-replay\analysis\notebooks\tyre_degradation.ipynb  DNF_AND_FINISH_DETECTION.md  FEATURE.md  IMPROVEMENT_ANALYSIS.md  NewIdeasRecommendation.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  roadmap.md  run_poc.py  test_strategy_strip.py  test_track_statuses.py
.github/: PULL_REQUEST_TEMPLATE.md  bug_report.yml  config.yml  feature_request.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
analysis/app/: simulator_app.py
analysis/notebooks/: driver_style_fingerprinting.ipynb  lap_time_model.ipynb  overtaking_model.ipynb  race_simulator.ipynb  tyre_degradation.ipynb  tyre_degradation.ipynb 
client/: index.html  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src/hooks/: useAnimatedTrackCanvas.ts  useComparisonMode.ts  useDriverSummary.ts  useLeaderboard.ts  usePlaybackControls.ts  useRaceLoader.ts  useRacePlayback.ts  useRaceSelect.ts  useTrackStatus.ts
client/src/pages/: DashboardPage.tsx  RaceSelectPage.tsx
client/src/services/: api.ts  telemetryService.ts
design-system/: MASTER.md
docs/: InsightsMenu.md
launcher/: data_handler.py  ui_main.py
project/: Pit Wall.html  build.mjs  package-lock.json  package.json
project/src/: App.jsx  App.test.jsx  Controls.jsx  IsoTrack.jsx  PanelFrame.jsx  PanelRegistry.jsx  Panels.jsx  Telemetry.jsx  data.jsx  hotkeyHandler.js  index.jsx  live_state.jsx  loading_gate.jsx
server/: preprocess.py  requirements.txt  test_models.py
server/api/: __init__.py  main.py
server/config/: __init__.py  settings.py
server/core/: __init__.py  cache_manager.py  f1_data.py  telemetry_processor.py  tyres.py
src/: arcade_replay.py  bayesian_tyre_model.py  cli_strategy.py  config.py  f1_data.py  incident_detection.py  live_f1_data.py  overtaking_integrator.py  race_comparison.py  run_session.py  showMenu.py  strategy_analyzer.py  tyre_degradation_integration.py  ui_components.py  ui_components_incidents.py  ui_widgets.py  wiki_utils.py  youtube_api.py
src/cli/: race_selection.py  telemetry_compare.py
src/compare/: __init__.py  compare_chart.py  telemetry_compare.py
src/config_files/: gui_config.yaml  logging_config.yaml
src/data/: cache.py  f1_season_data.py  processing.py  session.py  telemetry.py
src/f1_race_replay/: __init__.py  arcade_replay.py  f1_data.py  main.py  ui_components.py
src/gui/: insights_menu.py  insights_window.py  pit_wall_window.py  race_selection.py  tyre_degradation_window.py  youtube_player.py
src/insights/: __init__.py  chart_generator.py  driver_telemetry_window.py  drs_traffic_window.py  engineer_chat_window.py  head_to_head_window.py  lap_time_chart_window.py  overtaking_insight.py  race_pace_window.py  strategy_utils.py  telemetry_stream_viewer.py  timing_tower_window.py  track_position_window.py  tyre_hologram_room.py  tyre_strategy_window.py  undercut_alert_window.py  undercut_overcut_window.py  virtual_position_window.py
src/interfaces/: analyzer_ui.py  comparison_viewer.py  live_race.py  menu.py  qualifying.py  race_replay.py
src/lib/: exceptions.py  logging.py  settings.py  time.py  tyres.py  utils.py
src/services/: bridge.py  stream.py
src/ui/: __init__.py  base.py  controls.py  driver_info.py  lap_times.py  leaderboard.py  legend.py  popups.py  progress_bar.py  qualifying.py  session_info.py  utils.py  weather.py
src/web/: playback.py
tests/: __init__.py  conftest.py  test_data_processing.py  test_incidents.py  test_time.py  test_tyres.py  test_ui_calculations.py  test_ui_components.py  test_ui_helpers.py
(+69 files in other folders)
