[project]
name = "f1-race-replay-fork"
version = "1.0.0"
description = "A Python application for visualizing Formula 1 race telemetry and replaying race events with interactive controls and a graphical interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "fastf1>=3.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyglet>=2.1.13",
    "pyside6>=6.10.2",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]
